# top_music_analysis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clustering.py  config.py  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
data/: clustered_data.csv  data.csv
models/: .gitignore
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
references/: linting.md
src/: config.py
top_music_analysis/: clustering.py  config.py  pipeline.py  spotify.py
