[tool.poetry]
name = "top-music-analysis"
version = "0.1.0"
description = ""
authors = ["pacifikus <masterkristall@gmail.com>"]
readme = "README.md"
packages = [{include = "top_music_analysis"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
requests = "^2.28.1"
spotify = "^0.10.2"
pandas = "^1.5.1"
pyclustertend = "^1.8.2"
scikit-learn = "^1.1.3"
plotly = "^5.11.0"
luigi = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
