[tool.poetry]
name = "top-music-analysis"
version = "0.1.0"
description = ""
authors = ["pacifikus <masterkristall@gmail.com>"]
readme = "README.md"
packages = [{include = "top_music_analysis"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
requests = "^2.28.1"
spotify = "^0.10.2"
pandas = "^1.5.1"
pyclustertend = "^1.8.2"
scikit-learn = "^1.1.3"
plotly = "^5.11.0"
luigi = "^3.1.1"
pre-commit = "^2.20.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.10.1"
flake8-simplify = "^0.19.3"
flake8-commas = "^2.1.0"
flake8-global-variables = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
exclude = '''
/(
  | \.git
  | \.venv
  | data
  | dist
  | notebooks
)/
'''

[tool.isort]
profile = 'black'
force_grid_wrap = 2
combine_as_imports = true
line_length = 80
skip = ['data', 'dist', 'venv', '.venv', 'notebooks']
